deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: employeeservice
  labels:
    app: employeeservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employeeservice
  template:
    metadata:
      labels:
        app: employeeservice
    spec:
      containers:
        - name: employeeservice
          image: jayasekara84/employee-service:latest
          volumeMounts:
          - name: config-volume
            mountPath: /etc/config
          ports:
              - containerPort: 8080
      volumes:
        - name: config-volume
          configMap:
              name: employeeservice
              items:
               - key: application.properties
                 path: application.properties
