pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rsj
  labels:
    app : employeeservice
    creation_method: manual
    env: prod
spec:
  containers:
  - image: jayasekara84/employee:v2
    name:  rsj
    ports:
    - containerPort: 8080
      protocol: TCP
