jenkins-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-loadbalancer
spec:
  selector:
    app: jenkins
  type: LoadBalancer
  ports:
  - name: http
    port: 8090
    targetPort: 8080
