service.yaml
kind: Service
apiVersion: v1
metadata:
  name: loadbalancer
spec:
  selector:
    app: employeeservice
  type: LoadBalancer
  ports:
  - name: http
    port: 8090
    targetPort: 8080
